crates/vouched/tests/ui/vouched/impls_try_from_borrowed_str_missing_string_validation.rs
use vouched::Vouched;

#[derive(Vouched)]
#[vouched(impls(try_from(&str)))]
struct MissingStringValidation(String);

fn main() {}
